switch to thickbox

--- a/packrat/templates/main.html
+++ b/packrat/templates/main.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block inlinescript %}
-      new image_search('results', [ 'vis:public' ], { limit: 32, order: 'random' });
+      image_search('results', [ 'vis:public' ], { limit: 32, order: 'random' });
 {% endblock %}
 {% block maintitle %}Recent pictures{% endblock %}
 {% block main %}
