--- a/packrat/templates/base.html
+++ b/packrat/templates/base.html
@@ -3,6 +3,10 @@
   <head>
     <title>{% block title %}Packrat{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{% url packrat.urls.static path="style.css" %}" />
+
+    <script type="text/javascript">window.packrat_base="{% url packrat.urls.index %}";</script>
+    <script type="text/javascript">window.packrat_static="{% url packrat.urls.static path="./" %}";</script>
+
     <script type="text/javascript" src="{% url packrat.urls.static path="jquery-1.1.3.1.js" %}"></script>
 
     <script type="text/javascript" src="{% url packrat.urls.static path="ext-1.1/adapter/jquery/jquery-plugins.js" %}"></script>
@@ -10,10 +14,9 @@
     <script type="text/javascript" src="{% url packrat.urls.static path="ext-1.1/ext-all-debug.js" %}"></script>
     <link rel="stylesheet" type="text/css" href="{% url packrat.urls.static path="ext-1.1/resources/css/xtheme-vista.css" %}" />
 
-    <script type="text/javascript" src="{% url packrat.urls.static path="lightbox.js" %}"></script>
-    <link rel="stylesheet" type="text/css" href="{% url packrat.urls.static path="lightbox.css" %}" />
+    <script type="text/javascript" src="{% url packrat.urls.static path="thickbox.js" %}"></script>
+    <link rel="stylesheet" href="{% url packrat.urls.static path="thickbox.css" %}" type="text/css" media="screen" />
 
-    <script type="text/javascript">window.base="{% url packrat.urls.index %}";</script>
     {% block scripts %}<script type="text/javascript" src="{% url packrat.urls.static path="packrat.js" %}"></script>{% endblock %}
     <script type="text/javascript">
       <!--
