remove "for each" since it only works on ff.  style adjustments

--- a/packrat/static/style.css
+++ b/packrat/static/style.css
@@ -90,6 +90,9 @@ ul.horiz > li {
   background-color: #887;
 }
 
-#calendar table.calendar-grid td.pictures { 
+#calendar table.calendar-grid td.pictures {
   background-color: #999;
+}
+#calendar table.calendar-grid td.day.Sunday.pictures {
+  background-color: #aa9;
 }
