- add general-purpose accordion control; replace special case code - fiddle with date stuff

--- a/packrat/templates/base.html
+++ b/packrat/templates/base.html
@@ -35,6 +35,7 @@
       tb_pathToImage = packrat.static + tb_pathToImage;
 
       // make sure thickbox keeps track of dynamic additions
+      // XXX too slow
       //$('.thickbox').behavior(function() { tb_init(this); });
 
       {% block pagescript %}{% endblock %}
