--- a/packrat/templates/base.html
+++ b/packrat/templates/base.html
@@ -54,8 +54,8 @@
 	      <div id="next"></div>
 	    </div>
 	  </li>
-	  <li><a href="{% url packrat.ui.index %}">Overview</a></li>
-	  <li><a href="{% url packrat.ui.cal_overview %}">Calendar</a></li>
+	  <li id="sb-slideshow"><a href="{% url packrat.ui.index %}">Slideshow</a></li>
+	  <li id="sb-calendar"><a href="{% url packrat.ui.cal_overview %}">Calendar</a></li>
 	</ul>
 	{% endblock %}
       </div>
